# stack

./: configure.ac
lib/: Makefile.am
lib/boolector/: btormain.c  btorutil.h
lib/lingeling/: lglib.h
src/: Makefile.am
